# sparrow_db

./: .gitmodules  Cargo.toml  README.md
client/: Cargo.toml
model/: Cargo.toml  build.rs
model/src/: lib.rs
model/src/proto/: helloworld.proto  helloworld.rs  helloworld_grpc.rs  mod.rs  operation.proto  operation.rs  operation_grpc.rs
rocksdb_sys/: Cargo.toml
src/storage/: mod.rs  rocksdb_engine.rs  storage_engine.rs
