[package]
name = "client"
version = "0.1.0"
authors = ["Edward Li <edwardli@amazon.com>"]

[dependencies]
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
grpcio-proto = { version = "0.4"}
sparrow_db_model = {path = "../model"}

[[bin]]
name = "client"
path = "src/bin/client.rs"